--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "cuid": "^2.1.6",
     "date-fns": "^2.0.0-alpha.27",
+    "dom": "0.0.3",
     "firebase": "^6.0.2",
     "google-map-react": "^1.1.4",
     "moment": "^2.22.0",
@@ -19,7 +20,8 @@
     "react-redux": "^5.1.1",
     "react-redux-firebase": "^2.2.6",
     "react-redux-toastr": "^7.5.1",
-    "react-router-dom": "^5.0.0",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0",
     "redux": "^4.0.1",
     "redux-auth-wrapper": "^2.1.0",
